@@ -1,3 +1,3 @@
 DIST code2color 199875 SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d SHA512 d9cf24434bf105a138ee82652867aedb83dfe6bfea14d20337f97cf9d37ff9f370a4a7dd58bc7eb69de0f3b944d47c7d7e075f50098b0966e753f42b1b35c22f WHIRLPOOL cdb748e04663a6a109310da454ff5a245e6562ec8cdae03a35ca93095e40511707662c4743dcd922049838cac646d930e6b2d2878f26c328916bb3c9c60c5e8c
-DIST less-450.tar.gz 310123 SHA256 9d350ceeaa333e053049d63af8072a3c926edd86b54755f0a0d103045b925066 SHA512 77f9f087d0b7a2245457d3aa21b1295c2ef996fea58086abdf09860aedf4303c8c56d58454e2e1acce383b8dc6a96829f3fbf2ce5f610052bd21d9b2b9c1c295 WHIRLPOOL 0a1d7e79258f4136b3122b28dbe4f723a0536be4a065c0424e76b0a0d9425e92799d1f27ccc6b920bfb8acc7d59a3ee85b7fa40755358389d59fbd9bde8945ef
-DIST less-select-2.2.tar.gz 25047 SHA256 b9a35194fd6c188a9aedc6835b233f0e8078df0e309e39067c893b8b1f73141f
+DIST less-451.tar.gz 310144 SHA256 9fe8287c647afeafb4149c5dedaeacfd20971ed7c26c7553794bb750536b5f57 SHA512 6a9a0853e802306c9f6695e8a71f2bcfd38479c80a4f814852fd012caf4823f448d9f203ca52bc356f31aa368bf96e773938ee2be5ff20804dce3ee1a28bf42d WHIRLPOOL 4fe6ed7e814bcef467175b978827a9009094f4a5395ee746c74bb13f38830bf19aa4e54da60b80b68d61a92525f383749eb0c019e4eddf6b89d87d9df05bf43a
+DIST less-select-2.2.tar.gz 25047 SHA256 b9a35194fd6c188a9aedc6835b233f0e8078df0e309e39067c893b8b1f73141f SHA512 5ce36fa4e404ae626f9c96ffcf58b9188e0f12c6db0321d3f0ed8fe47593951d072e1da53b874e80fc39041ae8aa85d06d646215d7ad63c611cb096ff5ca9136 WHIRLPOOL ec5341dbb4292f3e776e32ba996ef2efe2aa89438d4f0907efecdcf234d27b2b0e149d43ebd6dee089365c20f2a0796497e5cceebf3f25b846c14e8f0d9e762e
