@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*less-451.ebuild (23 Jul 2012)
+
+  23 Jul 2012; Martin Väth <martin@mvath.de>
+  Bump less version. Simplify doc install and pcre passing as in main tree.
+
 *less-450.ebuild (16 Jul 2012)
 
   16 Jul 2012; Martin Väth <martin@mvath.de>
